--- a/web/Rails/app/views/contacts/new.html.erb
+++ b/web/Rails/app/views/contacts/new.html.erb
@@ -10,17 +10,19 @@
 
 	<p><%= @contact.errors.full_messages %></p> <!-- Вывод списка ошибок Вариант 1 -->
 
-	<% if @contact && @contact.errors.any? %> <!-- Вывод списка ошибок Вариант 2 -->
-  	<p><%= @contact.errors.full_messages %></p>
-	<% end %>
-
-	<% if @contact && @contact.errors.any? %> <!-- Вывод списка ошибок Вариант 2 в виде списка -->
+	<!-- Вывод списка ошибок Вариант 2: в виде списка с проверкой на существование -->
+	<% if @contact && @contact.errors.any? %>
 	  <ul>
 	    <% @contact.errors.full_messages.each do |msg| %>
 	      <li><%= msg %></li>
 	    <% end %>
 	  </ul>
 	<% end %>
+
+	<!-- Вывод списка ошибок Вариант 3: с использованием паршала(только для форм form_with ??) -->
+	<%= render 'shared/errors', object: @contact %>
+	<!-- 'shared/errors' - название вместе с директорией, тк это директория не относящаяся к контроллеру сущности -->
+	<!-- object: @contact - передаем значение сущности в локальную переменную(как бутто параметр в метод), которую используем в паршале, чтоб применить его к конкретной сущности что нам нужна -->
 
 	<p>
 	  <%= f.label :email %>
