--- a/web/Rails/app/views/layouts/application.html.erb
+++ b/web/Rails/app/views/layouts/application.html.erb
@@ -83,8 +83,23 @@
     </ul>
 
 
+    <!-- Отображаем наши флэш сообщения(тут используем бутстрап стили) -->
+    <main class="container mt-3">
+      <% flash.each do |k, v| %>
+        <!-- k тут передает :success; v передает "Question created!" -->
 
-    <%= yield %>
+        <!-- Вариант 1: синтаксис html -->
+        <div class="alert alert-<%= k %>"> <!-- подставляем ключ k, который у нас имеет значение :success в значение клааса, те получаем класс бутстрапа alert-success -->
+          <%= v %> <!-- передаем значение, например "Question created!" -->
+        </div>
+
+        <!-- Вариант 2: синтаксис Рэилс с хэлпером tag (эта конструкция аналог для той что выше) -->
+        <%= tag.div v, class: "alert alert-#{k}", role: 'alert' %> <!--  -->
+
+      <% end %>
+
+      <%= yield %>
+    </main>
 
 
     <!-- Футер со вставкой года от сегодняшней даты(Руби) -->
