--- a/web/Sinatra/views/a_index.erb
+++ b/web/Sinatra/views/a_index.erb
@@ -9,8 +9,7 @@
   <!-- action="/"  - задает обработчик определенного URL, в который будут отправляться данные из формы -->
   <!-- method="POST"  - задает метод при помощи которого будут отправлены данные из формы  -->
 
-  <input type="text" name="aaa"> <!-- Данные введенные в поле обозначаются значением "aaa" атрибута name и помещаются в метод params в виде :name => 'введенный пользователем текст' -->
+  <input type="text" name="aaa"> <!-- Данные введенные пользователем в это поле обозначаются значением "aaa" атрибута name и помещаются в метод params в виде :name => 'введенный пользователем текст' -->
   <input type="password" name="bbb">
-  <input type="submit"> <!-- активизирует пост запрос и отправляет данные в обработчик с методом(тут post ) и с URL-адресом, заданными в теге формы -->
-
+  <input type="submit"> <!-- активизирует пост запрос и отправляет данные в обработчик с методом и URL-адресом, из значений атрибутов тега формы -->
 </form>
