--- a/web/Sinatra/views/layout.erb
+++ b/web/Sinatra/views/layout.erb
@@ -10,12 +10,10 @@
   </head>
   <body>
 
-    <h2 style="color: lightblue;">
-      layout.erb используeтся. Этот блок будет на всех страницах<br>
+    <h2 style="color: lightblue;"> <!-- блок меню -->
       <a href="/">Главная</a><br>
       <a href="/showusers">Показать вывод из БД(Барбершоп)</a><br>
       <a href="/new">Написать пост(Лепрозорий)</a><br>
-      layout.erb используeтся. Этот блок будет на всех страницах
     </h2>
 
     <div><!-- блок сообщения об ошибке -->
