--- a/web/Rails/app/views/articles/new.html.erb
+++ b/web/Rails/app/views/articles/new.html.erb
@@ -1,11 +1,11 @@
 <h1>New article</h1>
 
-<!--                                            Форма в Рэилс -->
+<!--                                            Форма form_for -->
 
 <!-- Этот синтаксис Рэилс для формы не обязателен и можно просто писать HTML как в формах Синатры -->
 
 <%= form_for :article, url: articles_path, data: {turbo:false} do |f| %> <!-- Тут именно с %= -->
-  <!-- form_for - стандартный форм билдер(хэлпер), создает форму. Существуют разные форм билдеры, например для формы Бутсрапа, есть ещё форм билдер Simple form итд, собственно form_for используется не так часто. -->
+  <!-- form_for - стандартный форм билдер(хэлпер), создает форму.(Существуют разные форм билдеры, например для формы Бутсрапа, есть ещё форм билдер Simple form итд, собственно form_for используется не так часто.) -->
   <!-- :article - параметр в единственном числе, тк форма отправляет данные об одной сущности. В итоге если посмотреть код то будет создана форма:
     <form action="/articles/new" accept-charset="UTF-8" method="post">
       <input type="hidden" name="authenticity_token" value="DGyL-HHUE0zhYRgsnOmkAZGbJQ" autocomplete="off" />
