--- a/web/Rails/app/views/layouts/application.html.erb
+++ b/web/Rails/app/views/layouts/application.html.erb
@@ -83,6 +83,9 @@
     </ul>
 
 
+
+    <!--                                    Кастомные флэш-сообщения -->
+    
     <!-- Отображаем наши флэш сообщения(тут используем бутстрап стили) -->
     <main class="container mt-3">
       <% flash.each do |k, v| %>
