--- a/web/Rails/app/views/articles/show.html.erb
+++ b/web/Rails/app/views/articles/show.html.erb
@@ -10,14 +10,14 @@
 <!--                                     Форма для комментариев 1(1 to many) -->
 
 <!-- По умолчанию URL формы будет '/articles/id'(show), но нам нужен '/articles/:article_id/comments', можно поменять вручную, но так делать не рекомендуется -->
-<!-- Потому для настройки нужного URL нужно использовать такой синтаксис со связью сущностей  -->
+<!-- Потому для генерации нужного URL нужно использовать такой синтаксис из 2х компонентов связанных сущностей  -->
 <%= form_for([@article, @comment]) do |f| %>
   <!-- какието поля -->
 <% end %>
 <!-- но у нас нет переменной @comment в контроллере articles#show get '/articles/id' из которого и возвращается представление с формой -->
 
-<!-- Тк нет переменной @comment используем метод build -->
-<!-- У нас есть коллекция(тут @article.comments). Если применить к этой коллекции метод build, то создастся новый объект Comment, все поля которого будут пустыми, за исключением aricle_id, соответсвующего @article, те привязан к нашей статье. Этот объект пока не будет сохранен, но его будет достаточно для создания нужного URL для form_for -->
+<!-- Тк нет переменной @comment используем метод build прямо в форме -->
+<!-- У нас есть коллекция(тут @article.comments). Если применить к этой коллекции метод build, то создастся новый объект Comment, все поля которого будут со значением nil, за исключением aricle_id, соответсвующего @article, те привязан к нашей статье. Этот объект пока не будет сохранен, но его будет достаточно для создания нужного URL для form_for -->
 <%= form_for([@article, @article.comments.build]) do |f| %>
   <!-- Теперь у нас есть нужный URL '/articles/:article_id/comments' в атрибуте action -->
 
