--- a/web/Rails/app/views/layouts/application.html.erb
+++ b/web/Rails/app/views/layouts/application.html.erb
@@ -85,14 +85,14 @@
 
 
     <!--                                    Кастомные флэш-сообщения -->
-    
+
     <!-- Отображаем наши флэш сообщения(тут используем бутстрап стили) -->
     <main class="container mt-3">
       <% flash.each do |k, v| %>
         <!-- k тут передает :success; v передает "Question created!" -->
 
         <!-- Вариант 1: синтаксис html -->
-        <div class="alert alert-<%= k %>"> <!-- подставляем ключ k, который у нас имеет значение :success в значение клааса, те получаем класс бутстрапа alert-success -->
+        <div class="alert alert-<%= k %>"> <!-- подставляем ключ k, который у нас имеет значение :success в значение класса, те получаем класс бутстрапа alert-success -->
           <%= v %> <!-- передаем значение, например "Question created!" -->
         </div>
 
