--- a/web/Rails/app/views/shared/_errors.html.erb
+++ b/web/Rails/app/views/shared/_errors.html.erb
@@ -1,5 +1,9 @@
+<!--                             Общий паршал для ошибок валидации в любых видах -->
+
+<!-- object  - (можно назвать как угодно) общее имя для объектов проверяемых на ошибки, чтобы можно было использовать этот паршал для разных сущностей -->
+
 <% if object.errors.full_messages.any? %>
-  <div class="alert alert-danger">
+  <div class="alert alert-danger"> <!-- например со стилями бутстрапа -->
     <ul class="mb-0">
       <% object.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
@@ -7,5 +11,3 @@
     </ul>
   </div>
 <% end %>
-
-<!-- object  - (можно назвать как угодно) общее имя для объектов проверяемых на ошибки, чтобы можно было использовать этот паршал для разных сущностей -->
