--- a/web/Rails/app/views/articles/show.html.erb
+++ b/web/Rails/app/views/articles/show.html.erb
@@ -14,7 +14,7 @@
 <%= form_for([@article, @comment]) do |f| %>
   <!-- какието поля -->
 <% end %>
-<!-- но у нас нет переменной @comment в контроллере articles#show get '/articles/id' из которого и возвращается представление с формой -->
+<!-- но мы не добавляли переменную @comment в контроллер articles#show get '/articles/id' из которого и возвращается представление с формой -->
 
 <!-- Тк нет переменной @comment используем метод build прямо в форме -->
 <!-- У нас есть коллекция(тут @article.comments). Если применить к этой коллекции метод build, то создастся новый объект Comment, все поля которого будут со значением nil, за исключением aricle_id, соответсвующего @article, те привязан к нашей статье. Этот объект пока не будет сохранен, но его будет достаточно для создания нужного URL для form_for -->
