--- a/web/Rails/app/views/home/index.html.erb
+++ b/web/Rails/app/views/home/index.html.erb
@@ -1,2 +1,2 @@
 <h1><%= @name %> welcome to Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<!-- @name теперь мы можем использовать данные из гет запроса тут -->
