--- a/web/Rails/app/views/layouts/application(helper).html.erb
+++ b/web/Rails/app/views/layouts/application(helper).html.erb
@@ -9,12 +9,12 @@
 
     <!--                      Хэлпер для названия вкладки с названием страницы -->
 
-    <!-- Интегрируем в тайтл значение хэлпера, с названием и сайта и конкретной страницы -->
+    <!-- Интегрируем в тайтл значение возвращаемое хэлпером, с названием и сайта и конкретной страницы -->
     <title><%= full_title(yield(:page_title)) %></title>
     <!-- full_title - название/оператор нашего хэлпера -->
-    <!-- yield(:page_title) - дополнительный, не главный yield, принадлежащий параметру хэлпера -->
-    <!-- :page_title - название(можно любое)для конкретного yield -->
-    <!-- Теперь из вида, что подставлен в данный момент уже в главный елд(например questions/index.html.erb) из provide :page_title передастся в этот yield значение, определив его по имени :page_title и далее значение отправляется в хэлпер, обрабатывается и подставляется в название вкладки -->
+    <!-- yield(:page_title) - дополнительный, не главный yield, с условием(content_for) который принимает только из provide с тем же параметром -->
+    <!-- :page_title - content_for/название(можно любое)для конкретного yield -->
+    <!-- Теперь из вида(например questions/index.html.erb), что подставлен в данный момент уже в главный yield из provide :page_title передастся в этот yield значение, определив его по имени :page_title и далее значение отправляется в хэлпер, обрабатывается и подставляется в название вкладки(тут 'Questions | AskIt') -->
 
 
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -27,7 +27,7 @@
 
   <body>
 
-    <!-- Интегрируем паршал _menu.html.erb но при помощи второстепенного yield вместо рэндер, тк по имени :main_menu из видов мы сможем передавать в этот yield то на какой мы странице меню находимся, чтобы подсветить нужную ссылку в меню отдельными стилями -->
+    <!-- Принимает блок с меню из provide :main_menu паршала _menu.html.erb с отрендериным в хэлпере currently_at кодом -->
     <%= yield :main_menu %>
 
 
