--- a/web/Rails/app/views/questions/index.html.erb
+++ b/web/Rails/app/views/questions/index.html.erb
@@ -2,13 +2,20 @@
 
 <!-- Данную конструкцию с другими значениями вместо 'Questions' можем добавить на другие страницы чтобы изменять название во вкладке -->
 <% provide :page_title, 'Questions' %>
-<!-- provide  - хэлпер передающий значение 'Questions' для конкретного yield с именем :page_title -->
+<!-- provide  - встроенный хэлпер передающий значение(тут 'Questions') для конкретного yield с именем :page_title -->
 
 
-<!--                      Паршал для меню сайта, для передачи через второстепенный yield -->
 
-<!-- Подключаем наш хэлпер, рендерищий меню и передающий имя страницы -->
-<!-- Придется его подключить на каждой странице, а иначе меню не будет отображаться, тк рендерится оно именно в хэлпере, а в yield :main_menu только передается.  (?? ВТФ это точно нормальный подход просто для того чтоб подсветить мтраницу в меню ??) -->
+<!--                      Кастомные хэлперы для динамического меню, переданного через yield -->
+
+<!-- Вызываем наш хэлпер, рендерищий меню и передающий имя страницы -->
+<!-- Придется его подключить на каждой странице, а иначе меню не будет отображаться, тк рендерится оно именно в хэлпере, а в yield :main_menu только передается.  -->
 <% currently_at 'Questions' %>
+<!-- 'Questions' - передаем параметром хэлпера название нашей страницы, которое должно быть идентично названию в ссылках с которых на эту страницу осуществляется переход -->
+
+
+
+
+<!--                                          Контент страницы -->
 
 <h1>Questions</h1>
