--- a/web/Rails/app/views/questions/show.html.erb
+++ b/web/Rails/app/views/questions/show.html.erb
@@ -32,6 +32,8 @@
 <!--                                           Форма для ответа -->
 <h2>Write your answer</h2>
 
+<!-- Вариант 1: Пишем код для формы в данном фаиле -->
+
 <!-- Используем общий паршал для ошибок  -->
 <%= render 'shared/errors', object: @answer %>
 
@@ -52,21 +54,22 @@
 <% end %>
 
 
-<!-- Вариант 2: Можно прописать весь этот код формы прямо тут, а можно вынести в отдельный паршал формы в answers/_form.html.erb, причем поместить туда и фому и паршал ошибок. Что удобно тк эту форму вместе с паршалом ошибок можно использовать и в answers/edit.html.erb -->
+<!-- Вариант 2: можно вынести в отдельный паршал формы в answers/_form.html.erb, причем поместить туда и фому и паршал ошибок. Что удобно тк эту форму вместе с паршалом ошибок можно использовать и в answers/edit.html.erb -->
 <%= render 'answers/form' %>
-<!-- И просто рендерим паршал формы из дркугой директории сюда используя путь с директорией, тк тут директория questions -->
+<!-- И просто рендерим паршал формы из другой директории сюда используя путь с директорией, тк тут директория questions -->
 
 
 
 <!--                                           Вывод всех ответов -->
 <h2 class="mt-5">Answers</h2>
 
+<!-- Вариант 1: Пишем код в цикле с разметкой для ответа прямо тут -->
 <% @answers.each do |answer| %>
 <!-- @answers = @question.answers.order created_at: :desc  -  прописали в экшене show контроллера Questions, похоже на хардкод вместо @question.answers -->
 <!-- Тоже самое прописали и в create контроллере Answers, нужно на случай с непройденной валидацией и рендером этой страницы -->
 
   <article class="mb-3" id="answer-<%= answer.id %>">
-  <!-- id="answer-... - добавим id для ссылки-якоря, в которой значением будет id из БД конкретного ответа -->
+  <!-- id="answer-... - добавим id(якорь) для ссылки-якоря, в которой значением будет id из БД конкретного ответа -->
 
     <!-- formatted_created_at - наш кастомный хэлпер, нужно прописать в модель Answer -->
     <time datetime="<%= answer.formatted_created_at %>">
@@ -85,6 +88,18 @@
   </article>
 <% end %>
 
+
+<!-- Вариант 2а: Вынесем код с разметкой для ответа в отдельный паршал в директории ответов answers/_answer.html.erb -->
+<!-- Цикл нам будет уже не нужен, тк Рэилс принимая коллекцию(массив) @answers автоматически будет выводить каждый ответ из нее применяя к нему паршал _answer.html.erb -->
+<%= render partial: 'answers/answer', collection: @answers, as: :answer, locals: {question: @question} %>
+<!-- partial: 'answers/answer'  - обозначаем что рэндерим именно паршал -->
+<!-- collection: @answers  - обозначаем то что за переменной коллекция, чтобы рендерило каждый элемент по очереди как в цикле -->
+<!-- as: :answer  - задаем что каждый элемент коллекции в паршале будет присваиваться в пеменную answer -->
+<!-- locals: {question: @question} - создаем в паршале локальную переменную question в которую присваиваем @question. Это нужно на случай если паршал будет применяться не только тут а на странице где из экшена не приходит @question -->
+
+<!-- Вариант 2б: Вынесем код с разметкой для ответа в отдельный паршал в директории ответов answers/_answer.html.erb -->
+<!-- По идее можно было делать и так и так бы тоже работало, Рэилс понимал бы все описанное сверху, кроме as: :answer, locals: {question: @question} и потому это бы работало только на тех страницах куда из экшена в вид и соотв рендерищийся в нем паршал бы передавалась переменная @question. Это работает так: по умолчанию Рэилс понимает что это коллекция, идет в директорию с тем же названием что и переменная и рэндерит паршал с тем же названием но в единственном числе -->
+<%= render @answers %>
 
 
 
