--- a/web/Rails/app/views/questions/index.html.erb
+++ b/web/Rails/app/views/questions/index.html.erb
@@ -18,4 +18,44 @@
 
 <!--                                          Контент страницы -->
 
-<h1>Questions</h1>
+<h1 class="mb-4">Questions</h1>
+
+<%= link_to 'New question', new_question_path, class: 'btn btn-primary btn-lg' %>
+
+<% @questions.each do |question| %>
+  <article class="card mt-3">
+    <div class="card-body">
+      <h4><%= question.title %></h4>
+
+      <section class="card-text">
+        <time datetime="<%= question.formatted_created_at %>">
+          <small><%= question.formatted_created_at %></small>
+        </time>
+
+        <div class="my-2">
+          <%= truncate strip_tags(question.body), length: 150, omission: '... (continued)' %>
+          <!-- обрезаем длинну вопроса и удаляем теги в тексте хэлперами -->
+        </div>
+      </section>
+
+      <%= link_to 'Show', question_path(question), class: 'btn btn-primary' %>
+      <%= link_to 'Edit', edit_question_path(question), class: 'btn btn-secondary' %>
+      <%= link_to 'Destroy', question_path(question), class: 'btn btn-danger',
+        data: {method: :delete, confirm: 'Are you sure?'} %>
+    </div>
+  </article>
+<% end %>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--  -->
