--- a/web/Rails/app/views/questions/index.html.erb
+++ b/web/Rails/app/views/questions/index.html.erb
@@ -22,6 +22,12 @@
 
 <%= link_to 'New question', new_question_path, class: 'btn btn-primary btn-lg' %>
 
+<!-- Пагинация вариант 1: kaminari - кнопки для переключения страниц -->
+<%= paginate @questions %>
+<!-- Пагинация вариант 2: pagy - кнопки для переключения страниц -->
+<%== pagy_bootstrap_nav @pagy %>
+<!--  -->
+
 <% @questions.each do |question| %>
   <article class="card mt-3">
     <div class="card-body">
@@ -45,6 +51,11 @@
     </div>
   </article>
 <% end %>
+
+<!-- Пагинация вариант 1: kaminari - кнопки для переключения страниц -->
+<%= paginate @questions %>
+<!-- Пагинация вариант 2: pagy - кнопки для переключения страниц -->
+<%== pagy_bootstrap_nav @pagy %>
 
 
 
