--- a/web/Rails/app/views/questions/show.html.erb
+++ b/web/Rails/app/views/questions/show.html.erb
@@ -68,8 +68,13 @@
 <!-- @answers = @question.answers.order created_at: :desc  -  прописали в экшене show контроллера Questions, похоже на хардкод вместо @question.answers -->
 <!-- Тоже самое прописали и в create контроллере Answers, нужно на случай с непройденной валидацией и рендером этой страницы -->
 
-  <article class="mb-3" id="answer-<%= answer.id %>">
-  <!-- id="answer-... - добавим id(якорь) для ссылки-якоря, в которой значением будет id из БД конкретного ответа -->
+  <!-- Блок ответа, с 2я вариантами якорей для ссылки якоря -->
+  <article class="mb-3" id="answer-<%= answer.id %>"> <!-- Вариант 1 обычный -->
+  <!-- id="answer-... - добавим id-якорь для ссылки-якоря, в которой значением будет id из БД конкретного ответа -->
+  <%= tag.article class: 'mb-3', id: dom_id(answer) do %> <!-- Вариант 2 при помощи хэлпера dom_id -->
+    <!-- тут будет все что между <article> и </article>-->
+  <% end %>
+  <!-- id: dom_id(answer) - добавим id-якорь для ссылки-якоря, в которой значением будет id из БД конкретного ответа -->
 
     <!-- formatted_created_at - наш кастомный хэлпер, нужно прописать в модель Answer -->
     <time datetime="<%= answer.formatted_created_at %>">
@@ -97,8 +102,8 @@
 <!-- as: :answer  - задаем что каждый элемент коллекции в паршале будет присваиваться в пеменную answer -->
 <!-- locals: {question: @question} - создаем в паршале локальную переменную question в которую присваиваем @question. Это нужно на случай если паршал будет применяться не только тут а на странице где из экшена не приходит @question -->
 
-<!-- Вариант 2б: Вынесем код с разметкой для ответа в отдельный паршал в директории ответов answers/_answer.html.erb -->
-<!-- По идее можно было делать и так и так бы тоже работало, Рэилс понимал бы все описанное сверху, кроме as: :answer, locals: {question: @question} и потому это бы работало только на тех страницах куда из экшена в вид и соотв рендерищийся в нем паршал бы передавалась переменная @question. Это работает так: по умолчанию Рэилс понимает что это коллекция, идет в директорию с тем же названием что и переменная и рэндерит паршал с тем же названием но в единственном числе -->
+<!-- Вариант 2б: Без доп опций, если точно знаем что используем там где @question определен -->
+<!-- Рэилс понимал бы все описанное сверху, кроме locals: {question: @question} и потому это бы работало только на тех страницах куда из экшена в вид и соотв рендерищийся в нем паршал бы передавалась переменная @question. Это работает так: по умолчанию Рэилс понимает что это коллекция, идет в директорию с тем же названием что и переменная и рэндерит паршал с тем же названием(но в единственном числе) -->
 <%= render @answers %>
 
 
