--- a/web/Rails/app/views/shared/_menu.html.erb
+++ b/web/Rails/app/views/shared/_menu.html.erb
@@ -6,15 +6,25 @@
   <header class="p-3 bg-dark text-white">
     <div class="container">
       <nav class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
 
+        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <!--  Заменим link_to на наш хэлпер nav_tab, чтобы менять стили в зависимости от страницы, он будет принимать все теже параметры что и link_to, за исключением классов для цвета(хотя можно и полностью классы убрать и все определять в теле хэлпера) -->
           <li><%= nav_tab 'Home', root_path, class: 'nav-link px-2', current_page: current_page %></li>
           <!--  current_page: current_page  - используем как параметр элемент хэша, где локальная переменная current_page(тут со значением 'Questions'), которую мы задали в хэлпере currently_at будет значением, а символ :current_page ключем для хэша-параметра options в параметрах хэлпера nav_tab -->
           <!-- В итоге сюда вернется ссылка возвращаемаая хэлпером nav_tab -->
           <li><%= nav_tab 'Questions', questions_path, class: 'nav-link px-2', current_page: current_page %></li>
-
         </ul>
+
+        <!-- Кастомный способ регистрации и авторизации -->
+        <ul class="nav col-12 col-lg-auto mb-2 mb-md-0">
+          <!-- Используем наши кастомные хэлперы user_signed_in? и current_user -->
+          <% if user_signed_in? %>
+            <li><a class="nav-link px-2 text-white" href="#"><%= current_user.name %></a></li>
+          <% else %>
+            <li><%= nav_tab 'Sign Up', new_user_path, class: 'nav-link px-2', current_page: current_page %></li>
+          <% end %>
+        </ul>
+
       </nav>
     </div>
   </header>
