--- a/web/Rails/app/views/questions/index.html.erb
+++ b/web/Rails/app/views/questions/index.html.erb
@@ -24,9 +24,16 @@
 
 <!-- Пагинация вариант 1: kaminari - кнопки для переключения страниц -->
 <%= paginate @questions %>
+
 <!-- Пагинация вариант 2: pagy - кнопки для переключения страниц -->
 <%== pagy_bootstrap_nav @pagy %>
-<!--  -->
+
+<!-- Пагинация вариант 2-1: pagy - скрываяем отображение кнопок если только 1 страница -->
+<%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
+<!-- pages - метод возвращает коллич страниц -->
+
+<!-- Пагинация вариант 2-2: pagy - аналогично предыдущему но вынесено в хэлпер pagination чтобы не писать везде условие -->
+<%= pagination(@pagy) %> <!-- теперь мы просто можем подставлять это везде -->
 
 <% @questions.each do |question| %>
   <article class="card mt-3">
@@ -54,8 +61,16 @@
 
 <!-- Пагинация вариант 1: kaminari - кнопки для переключения страниц -->
 <%= paginate @questions %>
+
 <!-- Пагинация вариант 2: pagy - кнопки для переключения страниц -->
 <%== pagy_bootstrap_nav @pagy %>
+
+<!-- Пагинация вариант 2-1: pagy - скрываяем отображение кнопок если только 1 страница -->
+<%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
+<!-- pages - метод возвращает коллич страниц -->
+
+<!-- Пагинация вариант 2-2: pagy - аналогично предыдущему но вынесено в хэлпер pagination чтобы не писать везде условие -->
+<%= pagination(@pagy) %> <!-- теперь мы просто можем подставлять это везде -->
 
 
 
