--- a/web/Rails/app/views/shared/_menu.html.erb
+++ b/web/Rails/app/views/shared/_menu.html.erb
@@ -19,7 +19,10 @@
         <ul class="nav col-12 col-lg-auto mb-2 mb-md-0">
           <!-- Используем наши кастомные хэлперы user_signed_in? и current_user -->
           <% if user_signed_in? %>
+            <!-- 1 Обычный вариант с current_user.name -->
             <li><a class="nav-link px-2 text-white" href="#"><%= current_user.name %></a></li>
+            <!-- 2 Вариант с декоратором если name опционально, те его может не быть -->
+            <li><a class="nav-link px-2 text-white" href="#"><%= current_user.name_or_email %></a></li>
           <% else %>
             <li><%= nav_tab 'Sign Up', new_user_path, class: 'nav-link px-2', current_page: current_page %></li>
           <% end %>
