--- a/web/Sinatra/views/layout.erb
+++ b/web/Sinatra/views/layout.erb
@@ -6,7 +6,7 @@
     <link href="/barbershop_styles.css" rel="stylesheet" media="all">
   	<!-- /barbershop_styles.css  - используем относительный путь от корня сайта(папка public тоже как корень) -->
     <!-- Очистите кэш страницы если не реагиркует на изменения в css фаиле - ctrl + shift + R (Mac: cmd + shift + r)-->
-    <script src="/pizzashop.js"></script>
+    <script src="/pizzashop.js"></script> <!-- подключение в Синатре через / -->
   </head>
   <body>
 
