--- a/web/Sinatra/views/hq_barbershop_index.erb
+++ b/web/Sinatra/views/hq_barbershop_index.erb
@@ -3,7 +3,7 @@
 <ul>
   <% @barbers.each do |barber| %>
     <!-- 1. Просто список -->
-    <li><%= barber.name %></li> <!-- тк barber это объект-сущность в которой хранятся данные о строке таблицы barbers, которую мы задали в фаиле миграции то можем обращаться через метод(название колонки) который мы задавали(t.text :name) -->
+    <li><%= barber.name %></li> <!-- тк barber это объект-сущность в которой хранятся данные о строке таблицы barbers, которую мы задали в фаиле миграции то можем обращаться через метод(название колонки) который мы задавали в фаиле миграции(t.text :name) -->
 
     <!-- 2. В виде ссылок ведущих на страницы парикмахеров(для универсальных обработчиков для однотипных страниц) -->
     <li><a href="/barber/<%= barber.id %>"><%= barber.name %></a></li>
