--- a/web/Rails/app/views/shared/_menu.html.erb
+++ b/web/Rails/app/views/shared/_menu.html.erb
@@ -42,7 +42,7 @@
             </li>
 
           <% else %>
-
+            <!-- Sign Up/регистрация(Создание юзера/акаунта) -->
             <li><%= nav_tab 'Sign Up', new_user_path, class: 'nav-link px-2', current_page: current_page %></li>
             <!-- Log in/вход в систему(Создание сессии) -->
             <li><%= nav_tab 'Log In', new_session_path, class: 'nav-link px-2', current_page: current_page %></li>
