--- a/web/Rails/app/views/users/_form.html.erb
+++ b/web/Rails/app/views/users/_form.html.erb
@@ -43,6 +43,20 @@
     </div>
   </div>
 
+  <!-- Добавим поле old_password для проверки старого пароля при редактировании профиля -->
+  <% unless @user.new_record? %>
+  <!-- unless @user.new_record? - Добавим только для существующих(не новых) пользователей (те работает только в edit)  -->
+    <div class="mb-3 row">
+      <div class="col-sm-2 col-form-label">
+        <%= f.label :old_password %>
+      </div>
+
+      <div class="col-sm-10">
+        <%= f.password_field :old_password, class: 'form-control form-control-lg' %>
+      </div>
+    </div>
+  <% end %>
+
   <!-- Добавим условие чтобы название кнопки соответсвовало либо регистрации либо сохранению редактирования -->
   <%= f.submit (@user.new_record? ? "Register!" : "Save"), class: 'btn btn-primary btn-lg' %>
   <!-- new_record? те новый объект существующий только в памяти а не в базе -->
