--- a/web/Rails/app/views/answers/_form.html.erb
+++ b/web/Rails/app/views/answers/_form.html.erb
@@ -8,7 +8,8 @@
     </div>
 
     <div class="col-sm-10">
-      <%= f.text_area :body, class: 'form-control' %>
+      <%= f.text_area :body, class: 'form-control', required: true %>
+      <!-- required: true - доп валидация на стороне формы(поле не должно быть пустым) -->
     </div>
   </div>
 
