--- a/web/Rails/app/views/contacts/new.html.erb
+++ b/web/Rails/app/views/contacts/new.html.erb
@@ -19,9 +19,9 @@
 	  </ul>
 	<% end %>
 
-	<!-- Вывод списка ошибок Вариант 3: с использованием паршала(только для форм form_with ??) -->
+	<!-- Вывод списка ошибок Вариант 3: с использованием паршала -->
 	<%= render 'shared/errors', object: @contact %>
-	<!-- 'shared/errors' - название вместе с директорией, тк это директория не относящаяся к контроллеру сущности -->
+	<!-- 'shared/errors' - название вместе с директорией, тк это директория не относящаяся к контроллеру сущности @contact -->
 	<!-- object: @contact - передаем значение сущности в локальную переменную(как бутто параметр в метод), которую используем в паршале, чтоб применить его к конкретной сущности что нам нужна -->
 
 	<p>
@@ -40,3 +40,14 @@
 	</p>
 
 <% end %>
+
+
+
+
+
+
+
+
+
+
+<!--  -->
