--- a/web/Rails/app/views/shared/_errors.html.erb
+++ b/web/Rails/app/views/shared/_errors.html.erb
@@ -1,6 +1,6 @@
 <!--                             Общий паршал для ошибок валидации в любых видах -->
 
-<!-- object  - (можно назвать как угодно) общее имя для объектов проверяемых на ошибки, чтобы можно было использовать этот паршал для разных сущностей -->
+<!-- object  - (можно назвать как угодно) общее имя для объектов проверяемых на ошибки, переданных например object: @contact, чтобы можно было использовать этот паршал для разных сущностей -->
 
 <% if object.errors.full_messages.any? %>
   <div class="alert alert-danger"> <!-- например со стилями бутстрапа -->
