--- a/web/Rails/app/views/articles/edit.html.erb
+++ b/web/Rails/app/views/articles/edit.html.erb
@@ -3,14 +3,14 @@
 <!--                                      Форма для редактирования сущности -->
 
 <%= form_for :article, url: article_path(@article), method: :patch do |f| %>
-  <!-- article_path(@article) - при помощи сущности из переменной @article перенаправляет форму на URL /articles/id(в POST метод update), по умолчанию форма отправляласть на /articles те в метод(POST) create -->
+  <!-- article_path(@article) - при помощи сущности из переменной @article перенаправляет форму на URL /articles/id (в POST метод update), по умолчанию форма отправляласть на /articles те в метод(POST) create -->
 
   <!-- method: :patch или method: :put - создает скрытое текстовое поле, чтобы Рэилс понял что это метод PUT/PATCH -->
   <!-- Браузер может отправлять только через GET или POST, других методов для него не существует. Но это можно обойти(workaround), создав скрытое поле которое добавит метод PUT, PATCH или DELETE -->
   <input type="hidden" name="_method" value="patch" autocomplete="off" /> <!-- Это скрытое поле добавлено Rails автоматически -->
   <!-- Данные будут отправляться методом POST, но Рэилс увидит скрытое поле  -->
 
-  <!-- В этой форме почемуто не нужно data: {turbo:false} ??  -->
+  <!-- ?? В этой форме почемуто не нужно data: {turbo:false} ??  -->
 
   <!-- автоматически подставляет в значения полей данные соотв столбцов из сущности(БД) присвоеннной в переменную тут @article(Делается по умолчанию если имя переменной == имени в форм билдере ??) -->
   <p>
@@ -26,3 +26,12 @@
     <%= f.submit %>
   </p>
 <% end %>
+
+
+
+
+
+
+
+
+<!--  -->
