--- a/web/Rails/app/views/shared/_menu.html.erb
+++ b/web/Rails/app/views/shared/_menu.html.erb
@@ -54,7 +54,71 @@
     </div>
   </header>
 
+
+
+
+  <!--                                    Вариант меню с переключением локалей i18n             -->
+
+  <header class="p-3 bg-dark text-white">
+    <div class="container">
+      <nav class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+
+        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+          <li><%= nav_tab t('menu.home'), root_path, class: 'nav-link px-2', current_page: current_page %></li>
+          <li><%= nav_tab t('menu.questions'), questions_path, class: 'nav-link px-2', current_page: current_page %></li>
+        </ul>
+
+        <!--  Собственно новый раздел(выпадающий список) переключения локалей  -->
+        <ul class="nav col-12 col-lg-auto mb-2 mb-md-0">
+          <li class="dropdown">
+            <%= link_to '#', class: 'nav-link px-2 dropdown-toggle text-white',
+              data: {"bs-toggle": 'dropdown'} do %>
+              <%= tag.div '', class: "flag #{I18n.locale}-flag mt-1" %> <!-- интерполяция для названия классов, чтоб сделать разные css-свойства для разных языков и картинки языка -->
+              <%= t I18n.locale %> <!-- Название текущей локали -->
+            <% end %>
+            <ul class="dropdown-menu"> <!-- собственно дропдаун с выбором локали -->
+              <% I18n.available_locales.each do |locale| %>
+                <li>
+                  <% if I18n.locale == locale %> <!-- если текущая локаль равна локали этого элемента списка -->
+                    <%= tag.span t(locale), class: 'dropdown-item' %> <!-- отображаем название локали, тут t(locale) это перевод названия локали(en, ru. соотв в yml будет например ru: 'Russian') на нужный язык -->
+                  <% else %> <!-- если текущая локаль не равна локали из переменной -->
+                    <%= link_to t(locale), root_path(locale: locale), class: 'dropdown-item' %> <!-- ссылка переключения локали, добавляет локаль в URL ?? (можно было без дропдаун, списка и цикла по простому сделать лишь 2 ссылки переключения с url_for(locale: :ru) и url_for(locale: :en)) -->
+                    <!-- root_path(locale: locale) - перебрасывает на главную -->
+                    <!-- url_for(locale: locale) - не перебрасывает на главную -->
+                    <!-- locale - название локали (тут :en или :ru) -->
+                  <% end %>
+                </li>
+              <% end %>
+            </ul>
+          </li>
+        </ul>
+
+        <ul class="nav col-12 col-lg-auto mb-2 mb-md-0">
+          <% if user_signed_in? %>
+            <li class="dropdown">
+              <%= nav_tab current_user.name_or_email, '#',
+                class: 'nav-link px-2 dropdown-toggle',
+                data: {"bs-toggle": 'dropdown'}, current_page: current_page %>
+              <ul class="dropdown-menu">
+                <li><%= link_to t('menu.edit_profile'), edit_user_path(current_user), class: 'dropdown-item' %></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><%= link_to t('menu.log_out'), session_path, class: 'dropdown-item', data: {method: :delete} %></li>
+              </ul>
+            </li>
+          <% else %>
+            <li><%= nav_tab t('menu.sign_up'), new_user_path, class: 'nav-link px-2', current_page: current_page %></li>
+            <li><%= nav_tab t('menu.log_in'), new_session_path, class: 'nav-link px-2', current_page: current_page %></li>
+          <% end %>
+        </ul>
+
+      </nav>
+    </div>
+  </header>
+
 <% end %>
+
+
+
 
 
 
